--- a/server/tomcat/web/css/orderManage.css
+++ b/server/tomcat/web/css/orderManage.css
@@ -824,6 +824,10 @@
   align-self: center;
 }
 
+.footer-root-class-name51 {
+  align-self: center;
+}
+
 @media(max-width: 1200px) {
   .footer-links {
     flex-wrap: wrap;
@@ -1070,6 +1074,7 @@
 
 .manage-list-order-heading-table {
   width: 100%;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   box-shadow: 0px 0px 6px 0px #d4d4d4;
   margin-top: 0px;
