--- a/server/tomcat/web/css/manage-profile-staff.css
+++ b/server/tomcat/web/css/manage-profile-staff.css
@@ -1,4 +1,4 @@
-.navbar-container {
+.navmain-container {
   width: 100%;
   display: flex;
   position: relative;
@@ -6,22 +6,23 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.navbar-container1 {
+.navmain-container1 {
   width: 100%;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
   height: 11vh;
   display: flex;
   opacity: 1;
-  align-items: flex-start;
-  background-color: var(--dl-color-theme-secondary1);
+  align-items: stretch;
+  justify-content: space-between;
 }
-.navbar-container2 {
+.navmain-container2 {
   width: 100%;
   display: flex;
   position: relative;
   justify-content: center;
   background-color: var(--dl-color-theme-secondary1);
 }
-.navbar-navbar-interactive {
+.navmain-navbar-interactive {
   top: 0;
   width: 100%;
   height: 11vh;
@@ -41,19 +42,23 @@
   justify-content: space-between;
   background-color: var(--dl-color-theme-secondary1);
 }
-.navbar-pasted-image {
+.navmain-link {
+  display: contents;
+}
+.navmain-pasted-image {
   width: 6vw;
   height: auto;
   min-width: 80px;
+  text-decoration: none;
 }
-.navbar-desktop-menu {
+.navmain-desktop-menu {
   flex: 1;
   width: 80vw;
   display: flex;
   position: relative;
   justify-content: space-between;
 }
-.navbar-links {
+.navmain-links {
   gap: var(--dl-space-space-twounits);
   width: 70vw;
   height: 10vh;
@@ -63,7 +68,7 @@
   flex-direction: row;
   justify-content: flex-start;
 }
-.navbar-container3 {
+.navmain-container3 {
   width: 30vw;
   height: 100%;
   display: flex;
@@ -71,13 +76,13 @@
   flex-direction: row;
   justify-content: center;
 }
-.navbar-textinput {
+.navmain-textinput {
   width: 100%;
   height: 3vh;
   padding-left: var(--dl-space-space-oneandhalfunits);
   border-radius: 20px;
 }
-.navbar-search {
+.navmain-search {
   width: 5vw;
   height: 3vh;
   display: flex;
@@ -87,11 +92,11 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-.navbar-text {
+.navmain-text {
   font-size: 0.9rem;
   font-weight: 400;
 }
-.navbar-container4 {
+.navmain-container4 {
   width: 35vw;
   height: 2vh;
   display: flex;
@@ -99,21 +104,21 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.navbar-home {
+.navmain-home {
   font-size: 0.9rem;
   text-decoration: none;
 }
-.navbar-contact {
+.navmain-contact {
   font-size: 0.9rem;
 }
-.navbar-whoweare {
+.navmain-whoweare {
   font-size: 0.9rem;
 }
-.navbar-manager-order {
+.navmain-manager-order {
   font-size: 0.9rem;
 }
-.navbar-buttons {
-  width: 17vw;
+.navmain-buttons {
+  width: 15vw;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -121,22 +126,19 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.navbar-icon {
+.navmain-link1 {
+  display: contents;
+}
+.navmain-icon {
   fill: #101010;
   width: 3vw;
   height: 3vh;
   margin-top: var(--dl-space-space-halfunit);
   margin-left: var(--dl-space-space-halfunit);
   margin-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
 }
-.navbar-icon02 {
-  fill: #161515;
-  width: 3vw;
-  height: 3vh;
-  margin-top: var(--dl-space-space-halfunit);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-.navbar-account {
+.navmain-account {
   width: 8vw;
   height: 4vh;
   display: flex;
@@ -148,45 +150,42 @@
   flex-direction: row;
   text-decoration: none;
 }
-.navbar-icon04 {
+.navmain-icon2 {
   width: 3vw;
   height: 3vh;
-  margin-left: var(--dl-space-space-halfunit);
 }
-.navbar-burger-menu {
+.navmain-burger-menu {
   display: none;
 }
-.navbar-icon06 {
+.navmain-icon4 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.navbar-mobile-menu {
+.navmain-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: none;
   padding: var(--dl-space-space-twounits);
   z-index: 100;
   position: absolute;
-  transform: translateX(100%);
-  transition: 0.5s;
   flex-direction: column;
   background-color: var(--dl-color-theme-neutral-light);
 }
-.navbar-nav {
+.navmain-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.navbar-top {
+.navmain-top {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-.navbar-container5 {
+.navmain-container5 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -194,16 +193,16 @@
   align-items: space-between;
   flex-direction: column;
 }
-.navbar-close-menu {
+.navmain-close-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.navbar-icon08 {
+.navmain-icon6 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.navbar-links1 {
+.navmain-links1 {
   gap: var(--dl-space-space-unit);
   flex: 0 0 auto;
   display: flex;
@@ -211,18 +210,18 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.navbar-container6 {
+.navmain-container6 {
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
 }
-.navbar-textinput1 {
+.navmain-textinput1 {
   width: 291px;
   padding-left: var(--dl-space-space-twounits);
   border-radius: 20px;
 }
-.navbar-search1 {
+.navmain-search1 {
   width: 61px;
   height: 33px;
   display: flex;
@@ -230,15 +229,19 @@
   padding-left: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
 }
-.navbar-text3 {
+.navmain-text3 {
   font-weight: 400;
 }
-.navbar-buttons1 {
-  gap: var(--dl-space-space-twounits);
-  display: flex;
-  margin-top: var(--dl-space-space-twounits);
-  align-items: center;
-}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -290,46 +293,123 @@
 
 
 @media(max-width: 1200px) {
-  .navbar-desktop-menu {
-    display: none;
+  .navmain-textinput {
+    font-size: 0.9rem;
   }
-  .navbar-burger-menu {
-    display: flex;
+  .navmain-icon {
+    width: 2vw;
+    height: auto;
+    margin-left: var(--dl-space-space-oneandhalfunits);
   }
-  .navbar-pasted-image1 {
+  .navmain-account {
+    width: 6vw;
+  }
+  .navmain-icon2 {
+    width: 2vw;
+    height: auto;
+    margin-left: 0px;
+  }
+  .navmain-pasted-image1 {
     width: 137px;
     height: 119px;
   }
 }
-@media(max-width: 767px) {
-  .navbar-navbar-interactive {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
+@media(max-width: 991px) {
+  .navmain-textinput {
+    font-size: 0.7rem;
   }
-  .navbar-burger-menu {
+  .navmain-text {
+    font-size: 0.7rem;
+  }
+  .navmain-container4 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .navmain-home {
+    font-size: 0.7rem;
+  }
+  .navmain-contact {
+    font-size: 0.7rem;
+  }
+  .navmain-whoweare {
+    font-size: 0.7rem;
+  }
+  .navmain-manager-order {
+    font-size: 0.7rem;
+  }
+  .navmain-account {
+    width: 5vw;
+    height: 3vh;
+    align-self: center;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+  }
+  .navmain-icon2 {
+    width: 1.25vw;
+    align-self: center;
+    margin-left: 0px;
+  }
+  .navmain-mobile-menu {
+    width: 100%;
+    height: 100%;
+    align-items: flex-start;
+  }
+  .navmain-nav {
+    width: 100%;
+    height: auto;
+    align-self: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: var(--dl-color-theme-secondary1);
+  }
+  .navmain-top {
+    margin-bottom: var(--dl-space-space-unit);
+  }
+  .navmain-links1 {
+    width: auto;
+    height: auto;
+  }
+}
+@media(max-width: 767px) {
+  .navmain-container1 {
+    align-self: center;
+  }
+  .navmain-burger-menu {
+    align-items: center;
+    justify-content: center;
+  }
+  .navmain-mobile-menu {
+    height: auto;
+  }
+  .navmain-nav {
+    align-self: center;
     align-items: center;
     justify-content: center;
   }
 }
 @media(max-width: 479px) {
-  .navbar-navbar-interactive {
-    padding: var(--dl-space-space-unit);
-    padding-right: 16px;
+  .navmain-desktop-menu {
+    display: none;
   }
-  .navbar-mobile-menu {
+  .navmain-burger-menu {
+    display: flex;
+  }
+  .navmain-mobile-menu {
     padding: var(--dl-space-space-unit);
   }
-  .navbar-pasted-image1 {
+  .navmain-pasted-image1 {
     width: 108px;
     height: 78px;
   }
-  .navbar-textinput1 {
+  .navmain-textinput1 {
     width: 257px;
     height: 37px;
   }
 }
 
-.menu-function-container {
+.navstaff-container {
   width: 100%;
   height: 5vh;
   display: flex;
@@ -340,14 +420,14 @@
   justify-content: center;
   background-image: linear-gradient(90deg, rgb(192, 36, 37) 0.00%,rgba(42, 42, 39, 0.45) 100.00%);
 }
-.menu-function-manager {
+.navstaff-manager {
   width: 70vw;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.menu-function-mgt-ware-house {
+.navstaff-mgt-ware-house {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
   font-size: 0.9rem;
@@ -355,18 +435,7 @@
   font-family: "Noto Sans";
   font-weight: 600;
 }
-.menu-function-mgt-customer {
-  fill: var(--dl-color-theme-secondary1);
-  color: var(--dl-color-theme-secondary1);
-  font-size: 0.9rem;
-  font-style: normal;
-  font-family: "Noto Sans";
-  font-weight: 600;
-  line-height: 1.15;
-  text-transform: none;
-  text-decoration: none;
-}
-.menu-function-mgt-feebcack {
+.navstaff-mgt-customer {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
   font-size: 0.9rem;
@@ -377,7 +446,7 @@
   text-transform: none;
   text-decoration: none;
 }
-.menu-function-mgt-staff {
+.navstaff-mgt-staff {
   fill: var(--dl-color-theme-secondary1);
   color: var(--dl-color-theme-secondary1);
   font-size: 0.9rem;
@@ -388,7 +457,7 @@
   text-transform: none;
   text-decoration: none;
 }
-.menu-function-mgt-report {
+.navstaff-mgt-report {
   font-size: 0.9rem;
 }
 
@@ -429,9 +498,14 @@
 
 
 
-.menu-function-root-class-name38 {
+.navstaff-root-class-name38 {
   align-self: center;
 }
+
+
+
+
+
 
 
 
@@ -542,6 +616,7 @@
   width: 50vw;
   display: flex;
   flex-grow: 1;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-end;
 }
@@ -626,6 +701,9 @@
 .footer-icon4 {
   width: 24px;
   height: 24px;
+}
+.footer-social-link5 {
+  text-decoration: none;
 }
 .footer-link3 {
   gap: 12px;
@@ -752,6 +830,51 @@
 .footer-root-class-name44 {
   align-self: center;
 }
+.footer-root-class-name45 {
+  align-self: center;
+}
+.footer-root-class-name46 {
+  align-self: center;
+}
+.footer-root-class-name47 {
+  align-self: center;
+}
+.footer-root-class-name48 {
+  align-self: center;
+}
+
+
+.footer-root-class-name51 {
+  align-self: center;
+}
+
+.footer-root-class-name53 {
+  align-self: center;
+}
+
+.footer-root-class-name55 {
+  align-self: center;
+}
+.footer-root-class-name56 {
+  align-self: center;
+}
+.footer-root-class-name57 {
+  align-self: center;
+}
+.footer-root-class-name58 {
+  align-self: center;
+}
+.footer-root-class-name59 {
+  align-self: center;
+}
+.footer-root-class-name60 {
+  align-self: center;
+}
+@media(max-width: 1200px) {
+  .footer-links {
+    flex-wrap: wrap;
+  }
+}
 @media(max-width: 991px) {
   .footer-newsletter {
     width: 300px;
@@ -774,6 +897,9 @@
     padding-right: var(--dl-space-space-halfunit);
     padding-bottom: var(--dl-space-space-halfunit);
   }
+  .footer-links {
+    flex-wrap: wrap;
+  }
 }
 @media(max-width: 767px) {
   .footer-content {
@@ -795,6 +921,7 @@
   }
   .footer-links {
     width: 100%;
+    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
   }
@@ -844,6 +971,7 @@
     width: 100%;
   }
   .footer-links {
+    flex-wrap: wrap;
     flex-direction: column;
   }
   .footer-column1 {
@@ -890,7 +1018,7 @@
   }
 }
 
-.edit-customer-container {
+.manage-profile-staff-container {
   width: 100%;
   display: flex;
   min-height: 100vh;
@@ -898,14 +1026,14 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.edit-customer-header {
+.manage-profile-staff-header {
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.edit-customer-body {
+.manage-profile-staff-body {
   width: 80vw;
   height: auto;
   display: flex;
@@ -914,7 +1042,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.edit-customer-link-page {
+.manage-profile-staff-link-page {
   width: 100%;
   height: 5vh;
   display: flex;
@@ -922,64 +1050,68 @@
   align-items: center;
   justify-content: flex-start;
 }
-.edit-customer-container1 {
+.manage-profile-staff-container1 {
   display: flex;
   align-self: flex-end;
   align-items: center;
   justify-content: center;
 }
-.edit-customer-text {
+.manage-profile-staff-text {
   font-size: 0.9rem;
   align-self: center;
   border-width: 0px;
   background-color: transparent;
 }
-.edit-customer-text01 {
+.manage-profile-staff-text01 {
   font-size: 0.9rem;
   align-self: center;
   border-width: 0px;
   background-color: transparent;
 }
-.edit-customer-text02 {
+.manage-profile-staff-text02 {
   font-size: 0.9rem;
   align-self: center;
   border-width: 0px;
   background-color: transparent;
 }
-.edit-customer-root {
+.manage-profile-staff-root {
   width: 100%;
   height: auto;
   display: flex;
   align-self: center;
+  box-shadow: 0px 2px 7px 0px #151313;
   margin-top: var(--dl-space-space-oneandhalfunits);
   align-items: flex-start;
   border-color: var(--dl-color-theme-neutral-dark);
   border-width: 1px;
+  border-radius: 20px;
   margin-bottom: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
   justify-content: flex-start;
-  background-color: var(--dl-color-theme-accent2);
 }
-.edit-customer-container2 {
+.manage-profile-staff-container2 {
   flex: 0 0 auto;
   width: 100%;
   height: 8vh;
   display: flex;
-  box-shadow: 4px 4px 4px 0px #6d6565;
+  box-shadow: 0px 4px 0px 0px #6d6565;
   align-items: center;
   border-color: var(--dl-color-theme-neutral-dark);
-  border-width: 2px;
+  border-width: 1px;
   justify-content: center;
-  background-color: #D9D9D9;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 0px;
 }
-.edit-customer-text03 {
+.manage-profile-staff-text03 {
   font-size: 3rem;
   font-style: italic;
   text-align: center;
   font-family: "Merriweather";
   font-weight: 700;
 }
-.edit-customer-container3 {
+.manage-profile-staff-container3 {
   display: flex;
   align-self: center;
   margin-top: var(--dl-space-space-oneandhalfunits);
@@ -988,7 +1120,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.edit-customer-form {
+.manage-profile-staff-form {
   width: 60vw;
   height: auto;
   display: flex;
@@ -998,7 +1130,7 @@
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.edit-customer-text04 {
+.manage-profile-staff-text06 {
   font-size: 1.2rem;
   align-self: center;
   font-style: normal;
@@ -1006,18 +1138,19 @@
   font-weight: 500;
   margin-bottom: 0px;
 }
-.edit-customer-select {
+.manage-profile-staff-select {
   width: 30vw;
-  height: auto;
+  height: 4vh;
   align-self: flex-start;
   padding-top: var(--dl-space-space-halfunit);
   border-color: var(--dl-color-theme-neutral-dark);
   border-width: 1px;
   padding-left: var(--dl-space-space-halfunit);
+  border-radius: 20px;
   padding-right: var(--dl-space-space-halfunit);
   padding-bottom: var(--dl-space-space-halfunit);
 }
-.edit-customer-form1 {
+.manage-profile-staff-form1 {
   width: 60vw;
   height: auto;
   display: flex;
@@ -1027,7 +1160,7 @@
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.edit-customer-text07 {
+.manage-profile-staff-text09 {
   font-size: 1.2rem;
   align-self: center;
   font-style: normal;
@@ -1035,14 +1168,15 @@
   font-weight: 500;
   margin-bottom: 0px;
 }
-.edit-customer-textinput {
+.manage-profile-staff-textinput {
   width: 30vw;
   height: 100%;
   border-width: 1px;
+  border-radius: 20px;
   background-color: var(--dl-color-theme-secondary1);
   border-bottom-width: 1px;
 }
-.edit-customer-form2 {
+.manage-profile-staff-form2 {
   width: 60vw;
   height: auto;
   display: flex;
@@ -1052,7 +1186,7 @@
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.edit-customer-text08 {
+.manage-profile-staff-text10 {
   font-size: 1.2rem;
   align-self: center;
   font-style: normal;
@@ -1060,14 +1194,15 @@
   font-weight: 500;
   margin-bottom: 0px;
 }
-.edit-customer-textinput1 {
+.manage-profile-staff-textinput1 {
   width: 30vw;
   height: 100%;
   border-width: 1px;
+  border-radius: 20px;
   background-color: var(--dl-color-theme-secondary1);
   border-bottom-width: 1px;
 }
-.edit-customer-form3 {
+.manage-profile-staff-form3 {
   width: 60vw;
   height: auto;
   display: flex;
@@ -1077,7 +1212,7 @@
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.edit-customer-text11 {
+.manage-profile-staff-text13 {
   font-size: 1.2rem;
   align-self: center;
   font-style: normal;
@@ -1085,64 +1220,15 @@
   font-weight: 500;
   margin-bottom: 0px;
 }
-.edit-customer-textinput2 {
+.manage-profile-staff-textinput2 {
   width: 30vw;
   height: 100%;
   border-width: 1px;
+  border-radius: 20px;
   background-color: var(--dl-color-theme-secondary1);
   border-bottom-width: 1px;
 }
-.edit-customer-form4 {
-  width: 60vw;
-  height: auto;
-  display: flex;
-  align-self: center;
-  margin-top: 0px;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-twounits);
-  justify-content: space-between;
-}
-.edit-customer-text14 {
-  font-size: 1.2rem;
-  align-self: center;
-  font-style: normal;
-  font-family: "Merriweather";
-  font-weight: 500;
-  margin-bottom: 0px;
-}
-.edit-customer-textinput3 {
-  width: 30vw;
-  height: 100%;
-  border-width: 1px;
-  background-color: var(--dl-color-theme-secondary1);
-  border-bottom-width: 1px;
-}
-.edit-customer-form5 {
-  width: 60vw;
-  height: auto;
-  display: flex;
-  align-self: center;
-  margin-top: 0px;
-  align-items: center;
-  margin-bottom: var(--dl-space-space-twounits);
-  justify-content: space-between;
-}
-.edit-customer-text17 {
-  font-size: 1.2rem;
-  align-self: center;
-  font-style: normal;
-  font-family: "Merriweather";
-  font-weight: 500;
-  margin-bottom: 0px;
-}
-.edit-customer-textinput4 {
-  width: 30vw;
-  height: 100%;
-  border-width: 1px;
-  background-color: var(--dl-color-theme-secondary1);
-  border-bottom-width: 1px;
-}
-.edit-customer-button {
+.manage-profile-staff-button {
   width: 8vw;
   height: 4vh;
   align-self: flex-end;
@@ -1150,10 +1236,10 @@
   border-color: #3a3330;
   margin-bottom: 0px;
 }
-.edit-customer-text20 {
+.manage-profile-staff-text16 {
   font-size: 1.5rem;
 }
-.edit-customer-footer {
+.manage-profile-staff-footer {
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -1161,8 +1247,18 @@
   justify-content: flex-start;
 }
 @media(max-width: 1200px) {
-  .edit-customer-text02 {
+  .manage-profile-staff-text02 {
     font-size: 0.9rem;
     background-color: transparent;
+  }
+  .manage-profile-staff-button {
+    width: auto;
+    font-size: 1rem;
+  }
+}
+@media(max-width: 767px) {
+  .manage-profile-staff-button {
+    width: auto;
+    font-size: 0.8rem;
   }
 }
