--- a/server/tomcat/web/css/auth-login.css
+++ b/server/tomcat/web/css/auth-login.css
@@ -7,6 +7,10 @@
   justify-content: flex-start;
 }
 
+body {
+  overflow-y: hidden;
+}
+
 .navlogout-container1 {
   width: 100%;
   height: 11vh;
@@ -524,6 +528,7 @@
   width: 100%;
   align-self: center;
   text-decoration: none;
+  margin-bottom: 5vh;
 }
 
 .sign-in-text8 {
